force-app/main/default/objects/Book_Issue__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Book Issues</relationshipLabel>
    <relationshipName>Book_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>